package application;

import application.transcoder.Transcoder;
import java.io.File;

public class FfmpegTranscoder implements Transcoder {

  @Override
  public String transcode(File source, File target) {
    return null;
  }
}
