package application.transcoder;

import java.io.File;

public class JobData {

  private File source;
  private File target;

  public File getSource(){
    return this.source;
  }
  public File getTarget(){
    return this.getTarget();
  }
}
